# pyS7

./: .gitignore  CHANGELOG.md  CPU_INFO_TECHNICAL_NOTES.md  LICENSE  RELEASE_NOTES_v2.5.0.md  Readme.md  address_parser.py  pyproject.toml  read_data.py
.github/workflows/: ci.yml  release-pypi.yml  release-testpypi.yml
docs/: ADVANCED_USAGE.md  API_REFERENCE.md  BEST_PRACTICES.md  CPU_STATUS_READING.md  METRICS.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_ANALYSIS.md  TROUBLESHOOTING.md  TROUBLESHOOTING_BIT_READ.md
examples/: async_client_demo.py  batch_write_demo.py  bit_read_workaround.py  connection_state_demo.py  context_manager_example.py  get_cpu_info.py  get_cpu_status.py  manage_reconnection.py  metrics_demo.py  read_data.py  read_data_logo.py  read_data_no_client.py  read_data_tsap.py  read_detailed_demo.py  read_item_data.py  write_data.py  write_detailed_demo.py
examples/debug/: comprehensive_plc_test.py  debug_bit_response.py  debug_connection_vs_bitread.py  debug_cpu_info.py  debug_cpu_status.py  debug_detailed.py  debug_grouping.py  debug_optimization.py  debug_optimized_read.py  debug_request.py  debug_string_read.py  discover_db1_size.py  discover_plc_values.py  inspect_string_bytes.py  performance_test.py  test_both_cpu_states.py  test_real_plc_values.py  test_string_lengths.py  test_szl_0x001c.py  tsap_connection.py  tsap_tia_portal_format.py  wstring_example.py
pyS7/: __init__.py  address_parser.py  async_client.py  client.py  constants.py  errors.py  item.py  metrics.py  requests.py  responses.py  tag.py
tests/: benchmark_performance.py  optimization_plan.py  test_address_parser.py  test_async_client.py  test_batch_write.py  test_client.py  test_connection_state.py  test_edge_cases.py  test_item.py  test_large_arrays.py  test_metrics.py  test_pdu_validation.py  test_read_detailed.py  test_requests.py  test_responses.py  test_szl.py  test_tsap.py  test_write_detailed.py
