[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyS7"
version = "0.1.3"
description = ""
readme = "Readme.md"
requires-python = ">=3.9"
keywords = ["plc", "s7", "siemens"]
license = {file = "LICENCE"}
authors = [
    { name = "Filippo Cara", email = "fili.cara@gmail.com" },
]
classifiers = [
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: SCADA",
    "Topic :: System :: Networking",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License"
]

[tool.setuptools]
packages = ["pyS7"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing -vv"
testpaths = ["tests"]

[tool.coverage.run]
parallel = true
source = [
    "pyS7",
    "tests",
]

[tool.mypy]
strict = true
show_column_numbers = true
show_error_codes = true
pretty = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "C901",  # too complex
    "E501",  # line too long, black handle it
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
