[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pys7"
version = "1.5.0"
description = "Lightweight Python library for Siemens S7 over ISO-on-TCP (RFC1006)."
readme = { file = "Readme.md", content-type = "text/markdown" }
requires-python = ">=3.8"
keywords = ["s7", "siemens", "plc", "industrial", "automation", "rfc1006", "iso-on-tcp"]
license = { text = "MIT" }
authors = [
    { name = "Alessandro", email = "xtimmy86x@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Networking",
  "Topic :: System :: Hardware",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Home Automation"
]

[project.urls]
Homepage = "https://github.com/xtimmy86x/pyS7"
Issues = "https://github.com/xtimmy86x/pyS7/issues"

[project.optional-dependencies]
# development dependency groups
dev = [
    'black>=23.7.0',
    'mypy>=1.4.1',
    'pytest>=7.4.0',
    'pytest-cov>=4.1.0',
    'ruff>=0.1.0'
]

[tool.setuptools]
packages = ["pyS7"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing -vv"
testpaths = ["tests"]

[tool.coverage.run]
parallel = true
source = [
    "pyS7",
    "tests",
]

[tool.mypy]
strict = true
show_column_numbers = true
show_error_codes = true
pretty = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "C901",  # too complex
    "E501",  # line too long, black handle it
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
